# Enlightenment-classic

./: LICENSE  README.md  meson.build  meson_options.txt
icons/EnlightenmentClassic/: index.theme
meson/: install_edj.sh  install_icons.sh
src/EnlightenmentClassic/: build.sh  meson.build
src/EnlightenmentClassic/edc/: wallpaper.edc
