option('edje-cc',
       type       : 'string',
       description: 'A path to a edje_cc. Defaults to system edje_cc')
option('edje-name',
       type       : 'string',
       description: 'Custom name for Moksha Theme. Defaults to MokshaMoonlight')
option('edj', 
       type : 'boolean', value : true,
       description: 'Install efl theme. Defaults to true')
